// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableMenu render unhandled type as nothing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TableMenu
    col={0}
    onMenuCommand={[MockFunction]}
    row={0}
    type={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`TableMenu renders without error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TableMenu
    col={0}
    onMenuCommand={[MockFunction]}
    row={0}
    type="row"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ul>
        <li
          className="insert-above"
          onClick={[Function]}
        >
          Insert 1 row above
        </li>
        <li
          className="insert-below"
          onClick={[Function]}
        >
          Insert 1 row below
        </li>
        <li
          className="delete"
          onClick={[Function]}
        >
          Delete this row
        </li>
      </ul>,
      "className": "obojobo-draft--chunks--table--table-menu row",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="insert-above"
            onClick={[Function]}
          >
            Insert 1 row above
          </li>,
          <li
            className="insert-below"
            onClick={[Function]}
          >
            Insert 1 row below
          </li>,
          <li
            className="delete"
            onClick={[Function]}
          >
            Delete this row
          </li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Insert 1 row above",
            "className": "insert-above",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Insert 1 row above",
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Insert 1 row below",
            "className": "insert-below",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Insert 1 row below",
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Delete this row",
            "className": "delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete this row",
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li
            className="insert-above"
            onClick={[Function]}
          >
            Insert 1 row above
          </li>
          <li
            className="insert-below"
            onClick={[Function]}
          >
            Insert 1 row below
          </li>
          <li
            className="delete"
            onClick={[Function]}
          >
            Delete this row
          </li>
        </ul>,
        "className": "obojobo-draft--chunks--table--table-menu row",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="insert-above"
              onClick={[Function]}
            >
              Insert 1 row above
            </li>,
            <li
              className="insert-below"
              onClick={[Function]}
            >
              Insert 1 row below
            </li>,
            <li
              className="delete"
              onClick={[Function]}
            >
              Delete this row
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Insert 1 row above",
              "className": "insert-above",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Insert 1 row above",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Insert 1 row below",
              "className": "insert-below",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Insert 1 row below",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Delete this row",
              "className": "delete",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Delete this row",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
